# mrkdb

./: .gitignore  AUTHORS  COPYING  README.md  configure.ac  do-it
man/: Makefile.am
src/: Makefile.am  diag.txt  gen-diag  kvp.c  kvp_private.h  lstore.c  lstore_private.h
src/mrkdb/: kvp.h  lstore.h
src/test/: Makefile.am  testfoo.c  testkvp.c  testlstore.c  testmacros.c  testtraversedir.c  unittest.h
